@@ -1,20 +1,8 @@
-FROM openjdk:17-slim
+FROM maven:latest
+LABEL authors="karki"
 
 WORKDIR /app
-
-RUN apt-get update && apt-get install -y \
-    libx11-6 libxext6 libxrender1 libxtst6 libxi6 libgtk-3-0 mesa-utils wget unzip \
-    && rm -rf /var/lib/apt/lists/*
-
-RUN mkdir -p /javafx-sdk \
-    && wget -O javafx.zip https://download2.gluonhq.com/openjfx/21.0.2/openjfx-21.0.2_linux-x64_bin-sdk.zip \
-    && unzip javafx.zip -d /javafx-sdk \
-    && mv /javafx-sdk/javafx-sdk-21.0.2/lib /javafx-sdk/lib \
-    && rm -rf /javafx-sdk/javafx-sdk-21.0.2 javafx.zip
-
-
-  COPY target/bmi.jar bmi.jar
-
-ENV DISPLAY=host.docker.internal:0.0
-
-CMD ["java", "--module-path", "/javafx-sdk/lib", "--add-modules", "javafx.controls,javafx.fxml", "-jar", "bmi.jar"]
+COPY pom.xml /app
+COPY . /app
+RUN mvn package
+CMD ["java", "-jar", "target/bmi.jar"]
